--- a/scss/base/_font.scss
+++ b/scss/base/_font.scss
@@ -7,3 +7,9 @@
 %noto_sans {
   font-family: "Noto Sans KR", sans-serif;
 }
+
+@mixin font_style($font_size, $letter_spacing, $line_height: 1) {
+  font-size: $font_size;
+  letter-spacing: $letter_spacing * $font_size / 1000;
+  line-height: $line_height;
+}
